--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
   repositories {
-    jcenter()
-    maven {
-      url 'https://maven.google.com/'
-      name 'Google'
-    }
+    maven { url 'https://maven.google.com' }
+    google()
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+    maven { url "https://plugins.gradle.org/m2/" }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.3.2'
+    classpath 'com.android.tools.build:gradle:8.1.4'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -18,10 +18,10 @@ buildscript {
 
 allprojects {
   repositories {
-    jcenter()
-    maven {
-      url 'https://maven.google.com/'
-      name 'Google'
-    }
+    maven { url 'https://maven.google.com' }
+    google()
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+    maven { url "https://plugins.gradle.org/m2/" }
   }
 }
