--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=1.10.1
+VERSION_NAME=1.10.2
 VERSION_CODE=15
 GROUP=com.getbase
 
@@ -31,3 +31,5 @@ POM_LICENCE_URL=https://github.com/futuresimple/android-floating-action-button/b
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=chalup
 POM_DEVELOPER_NAME=Jerzy Chalupski
+android.useAndroidX=true
+android.enableJetifier=true
