--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 28
-  buildToolsVersion "28.0.3"
 
   defaultConfig {
+    namespace "com.getbase.floatingactionbutton.sample"
     applicationId "com.getbase.floatingactionbutton.sample"
-    minSdkVersion 14
-    targetSdkVersion 28
+    minSdkVersion 26
+    targetSdkVersion 34
+    compileSdk 34
     versionCode 1
     versionName "1.0"
   }
