--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -17,6 +17,7 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+    namespace 'com.getbase.floatingactionbutton.sample'
 }
 
 dependencies {
